...
  final String selectedCategory;

  const DifficultySelectionPage({super.key, required this.selectedCategory});

  @override
  Widget build(BuildContext context) {
    final List<String> difficulties = ["Easy", "Medium", "Hard"];

    return SafeArea(
      child: Scaffold(
        appBar: AppBar(
          title: const Text(
            "Select Difficulty",
...
