...
      }
    }, builder: (context, state) {
      if (state is QuizLoadingFailureState) {
        return const SizedBox(
          child: Center(
            child: Text(
              'Failed to fetch quizzes.',
              style: TextStyle(
                  color: Colors.white,
                  decoration: TextDecoration.none,
                  fontSize: 20),
            ),
          ),
...
